# build_llm_from_scratch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
build_llm/chapters/chapter2/: tokenizer_example.py
build_llm/chapters/chapter3/: attention_examples.py
build_llm/chapters/chapter4/: README.md  activation_example.py  connection_link_example.py  dummy_gpt_example.py  feed_forward_example.py  gpt_example.py  layer_norm_example.py  transformer_example.py
build_llm/chapters/chapter5/: decoding_strategies.py  gpt_example_loss.py  training_gpt_model.py
build_llm/core/: activation.py  attention.py  dataset.py  dummy_gpt.py  ffn.py  gpt.py  loss.py  norm.py  tokenizers.py  transformer.py  utils.py
